fix id attribute issue

--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
             <div class="nav-links">
               <ul class="main-ul">
                 <li>
-                  <div class="links-container" id="links-btn">
+                  <div class="links-container">
                     <a href="#">Product</a>
                     <img
                       src="images/icon-arrow-light.svg"
-                      class="light-arrow"
-                      id="arrow"
-                      alt=""
+                      class="arrow"
+                      alt="arrow"
                     />
                   </div>
                   <div class="mega-menu">
@@ -61,13 +60,12 @@
                   </div>
                 </li>
                 <li>
-                  <div class="links-container" id="links-btn">
+                  <div class="links-container">
                     <a href="#">Company</a>
                     <img
                       src="images/icon-arrow-light.svg"
-                      class="light-arrow"
-                      alt=""
-                      id="arrow"
+                      class="arrow"
+                      alt="arrow"
                     />
                   </div>
                   <div class="mega-menu">
@@ -80,13 +78,12 @@
                   </div>
                 </li>
                 <li>
-                  <div class="links-container" id="links-btn">
+                  <div class="links-container">
                     <a href="#">Connect</a>
                     <img
                       src="images/icon-arrow-light.svg"
-                      class="light-arrow"
-                      alt=""
-                      id="arrow"
+                      class="arrow"
+                      alt="arrow"
                     />
                   </div>
                   <div class="mega-menu">
@@ -110,15 +107,14 @@
               <img class="close-icon" src="images/icon-close.svg" alt="" />
 
               <div class="burger-menu">
-                <ul class="burger-ul" id="burger-li">
+                <ul class="burger-ul">
                   <li>
-                    <div class="links-container" id="links-btn">
+                    <div class="links-container">
                       <a class="links-anchor" href="#">Product</a>
                       <img
                         src="images/icon-arrow-dark.svg"
-                        class="light-arrow"
-                        id="arrow"
-                        alt=""
+                        class="arrow"
+                        alt="arrow"
                       />
                     </div>
                     <div class="mega-menu">
@@ -131,13 +127,12 @@
                     </div>
                   </li>
                   <li>
-                    <div class="links-container" id="links-btn">
+                    <div class="links-container">
                       <a class="links-anchor" href="#">Company</a>
                       <img
                         src="images/icon-arrow-dark.svg"
-                        class="light-arrow"
-                        alt=""
-                        id="arrow"
+                        class="arrow"
+                        alt="arrow"
                       />
                     </div>
                     <div class="mega-menu">
@@ -150,13 +145,12 @@
                     </div>
                   </li>
                   <li>
-                    <div class="links-container" id="links-btn">
+                    <div class="links-container">
                       <a class="links-anchor" href="#">Connect</a>
                       <img
                         src="images/icon-arrow-dark.svg"
-                        class="light-arrow"
-                        alt=""
-                        id="arrow"
+                        class="arrow"
+                        alt="arrow"
                       />
                     </div>
                     <div class="mega-menu">
